Seed de 30 recursos + navbar con login/logout dinámico