@@ -3,12 +3,15 @@ package cl.tuuni.biblioteca.service;
 import cl.tuuni.biblioteca.entity.Usuario;
 import cl.tuuni.biblioteca.repo.UsuarioRepo;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,8 +22,8 @@ public class UsuarioService implements UserDetailsService {
 
     /** Registro con encriptación BCrypt */
     public Usuario registrar(String email, String nombre, String rawPassword) {
-        if (repo.findByEmail(email) != null) {
-            throw new RuntimeException("Email ya registrado");
+        if (repo.findByEmail(email).isPresent()) {
+            throw new IllegalArgumentException("El email ya está registrado");
         }
         Usuario u = Usuario.builder()
                 .email(email)
@@ -32,17 +35,30 @@ public class UsuarioService implements UserDetailsService {
         return repo.save(u);
     }
 
+    /** Utilidad: existe email */
+    public boolean existeEmail(String email) {
+        return repo.findByEmail(email).isPresent();
+    }
+
+    /** Utilidad: buscar usuario (o null si no existe) */
+    public Usuario buscarPorEmail(String email) {
+        return repo.findByEmail(email).orElse(null);
+    }
+
     /** Carga de usuario para Spring Security (login) */
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        Usuario u = repo.findByEmail(email);
-        if (u == null || !u.isHabilitado()) {
-            throw new UsernameNotFoundException("Usuario no existe o deshabilitado");
+        Usuario u = repo.findByEmail(email)
+                .orElseThrow(() -> new UsernameNotFoundException("Usuario no existe"));
+
+        if (!u.isHabilitado()) {
+            throw new UsernameNotFoundException("Usuario deshabilitado");
         }
-        return new User(
-                u.getEmail(),
-                u.getPassword(),
-                u.getRoles().stream().map(SimpleGrantedAuthority::new).toList()
-        );
+
+        List<GrantedAuthority> auth = u.getRoles().stream()
+                .map(SimpleGrantedAuthority::new)
+                .collect(Collectors.toList());
+
+        return new User(u.getEmail(), u.getPassword(), auth);
     }
 }
